--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lenis": "^1.3.8",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "0.166.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
