--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.vercel.live https://*.vercel.app; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://*.cloudinary.com https://res.cloudinary.com; font-src 'self'; frame-src 'self' https://*.vercel.live; connect-src 'self' https://*.vercel.live https://*.vercel.app wss://ws-us3.pusher.com https://*.cloudinary.com;"
+          "value": "default-src 'self' https://*.vercel.live; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.vercel.live https://*.vercel.app https://vercel.live *.vercel.live vercel.live; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://*.cloudinary.com https://res.cloudinary.com; font-src 'self'; frame-src 'self' https://*.vercel.live; connect-src 'self' https://*.vercel.live https://*.vercel.app wss://ws-us3.pusher.com https://*.cloudinary.com;"        
         },
         {
           "key": "X-Content-Type-Options",
