Major portfolio enhancements: accessibility, performance & error handling

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,71 @@
-node_modules
-.vercel
+# Dependencies
+node_modules/
+*.pnp
+.pnp.js
+
+# Production builds
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing files (not needed for deployment)
+/tests/
+/src/test/
+vitest.config.js
+TestSprite_*.md
+*.test.js
+*.test.jsx
+*.spec.js
+*.spec.jsx
+coverage/
+
+# Old/backup component files (not needed for deployment)
+*_old.jsx
+*_backup.jsx
+
+# Development tools
+.vscode/
+*.code-workspace
+settings.json
+
+# Deployment
+.vercel/
+.netlify/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.temp
+
