--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Harshad-Portfolio",
+  "name": "harshad-portfolio",
   "homepage": "https://dev-harshhh19.github.io/Harshad-Portfolio/",
   "version": "1.0.0",
   "description": "A beautiful single-page Portfolio of Harshad Nikam",
@@ -10,7 +10,11 @@
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "test": "npx @testsprite/testsprite-mcp@latest",
+    "test:unit": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
@@ -21,6 +25,7 @@
     "three": "0.166.1"
   },
   "devDependencies": {
+    "@testsprite/testsprite-mcp": "^0.0.14",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.0",
@@ -32,13 +37,28 @@
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
+    "vitest": "^0.34.0",
+    "@vitest/ui": "^0.34.0",
+    "jsdom": "^22.1.0"
   },
   "keywords": [
     "react",
     "portfolio",
     "certifications",
-    "developer"
+    "developer",
+    "web developer",
+    "web development",
+    "full stack developer",
+    "full stack web developer",
+    "full stack web development",
+    "javascript",
+    "typescript",
+    "node",
+    "express"
   ],
   "author": "Harshad Nikam",
   "license": "MIT"
