--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,45 @@
-# Dependencies
-node_modules/
-*.pnp
-.pnp.js
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Production builds
-dist/
-build/
+# dependencies
+/node_modules
+/legacy_backup
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# testing
+/coverage
 
-# Testing files (not needed for deployment)
-/tests/
-/src/test/
-vitest.config.js
-TestSprite_*.md
-*.test.js
-*.test.jsx
-*.spec.js
-*.spec.jsx
-coverage/
+# next.js
+/.next/
+/out/
 
-# Old/backup component files (not needed for deployment)
-*_old.jsx
-*_backup.jsx
+# production
+/build
 
-# Development tools
-.vscode/
-*.code-workspace
-settings.json
+# misc
+.DS_Store
+*.pem
 
-# Deployment
-.vercel/
-.netlify/
-
-# Logs
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
+.pnpm-debug.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# env files (can opt-in for committing if needed)
+.env*
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# vercel
+.vercel
 
-# IDE files
-.idea/
-*.swp
-*.swo
-*~
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
-# Temporary files
-*.tmp
-*.temp
 
+/legacy_backup
