--- a/package.json
+++ b/package.json
@@ -1,65 +1,31 @@
 {
-  "name": "harshad-portfolio",
-  "homepage": "https://dev-harshhh19.github.io/Harshad-Portfolio/",
-  "version": "1.0.0",
-  "description": "A beautiful single-page Portfolio of Harshad Nikam",
-  "type": "module",
+  "name": "next-app-temp",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "test": "npx @testsprite/testsprite-mcp@latest",
-    "test:unit": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "dev": "next dev -p 5173",
+    "build": "next build",
+    "start": "next start -p 5173",
+    "lint": "eslint"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
-    "lenis": "^1.3.8",
-    "lucide-react": "^0.292.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "0.166.1"
+    "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
+    "lucide-react": "^0.554.0",
+    "next": "16.0.10",
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@testsprite/testsprite-mcp": "^0.0.14",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.1.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "vite": "^4.5.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3",
-    "vitest": "^0.34.0",
-    "@vitest/ui": "^0.34.0",
-    "jsdom": "^22.1.0"
-  },
-  "keywords": [
-    "react",
-    "portfolio",
-    "certifications",
-    "developer",
-    "web developer",
-    "web development",
-    "full stack developer",
-    "full stack web developer",
-    "full stack web development",
-    "javascript",
-    "typescript",
-    "node",
-    "express"
-  ],
-  "author": "Harshad Nikam",
-  "license": "MIT"
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.8.32",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5"
+  }
 }
